--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjectionFixed" Version="5.1.2"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.3.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
